# depth-shoal

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/shoal-core/: Cargo.toml
crates/shoal-core/examples/: bench_insertion.rs
crates/shoal-core/src/: error.rs  lib.rs  ndjson.rs  spec.rs
crates/shoal-core/src/mem/: mod.rs  provider.rs  table.rs
crates/shoal-core/tests/: test_concurrency.rs  test_integration_sql.rs  test_lib.rs  test_multi_table.rs  test_multiple_writers.rs  test_safety_valves.rs  test_unit_ndjson_decoder.rs  test_unit_ndjson_framer.rs  test_unit_spec.rs  test_unit_storage.rs
crates/shoal-core/tests/common/: mod.rs
crates/shoal-server/: Cargo.toml
crates/shoal-server/src/: main.rs
