[workspace]
resolver = "2"
members = [
  "crates/shoal-core",
  "crates/shoal-server",
]

[workspace.dependencies]
# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Serde
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Async / HTTP / CLI
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
axum = { version = "0.8.7" }
clap = { version = "4.5.53", features = ["derive"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Arrow / DataFusion stack
arrow = { version = "57.1.0" }
arrow-json = { version = "57.1.0" }
parquet = { version = "57.1.0" }
datafusion = { version = "51.0.0" }
object_store = { version = "0.12.4" }
