[package]
name = "shoal-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
arrow-json = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
